# WhoIs

./: .gitignore  README.md
WhoIsModifier/: CMakeLists.txt  DbDeleteOp.cpp  DbDeleteOp.h  DbModifyingOps.cpp  DbModifyingOps.h  DbRenewOp.cpp  DbRenewOp.h  main.cpp
WhoIsServer/: CMakeLists.txt  main.cpp
